--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,13 +6,13 @@ phases:
       nodejs: 10
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
       - aws --version
       # - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 333427308013.dkr.ecr.us-east-1.amazonaws.com
       # - REPOSITORY_URI=333427308013.dkr.ecr.us-east-1.amazonaws.com/stock-temple-node-api
       - docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - echo $IMAGE_TAG
       - echo Installing source NPM dependencies...
       - npm install
   build:
