--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -25,9 +25,9 @@ phases:
       - echo $IMAGE_TAG
       
       - echo Building the Docker image...
-      - docker build -t node-api:latest .
-      - docker tag node-api:latest node-api:$IMAGE_TAG
-      - docker push node-api:$IMAGE_TAG
+      - docker build -t thaddavis/node-api:latest .
+      - docker tag thaddavis/node-api:latest thaddavis/node-api:$IMAGE_TAG
+      - docker push thaddavis/node-api:$IMAGE_TAG
       
       - sed -i "s/IMAGE_TAG/$IMAGE_TAG/" taskdef.json
       - TASK_VERSION=$(aws ecs register-task-definition --cli-input-json file://taskdef.json | jq --raw-output '.taskDefinition.revision')
