--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -48,4 +48,4 @@ phases:
       #- echo Writing image definitions file...
       #- printf '[{"name":"stock-temple-node-api","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-    files: imagedefinitions.json
+    files: appspec.yaml
